--- a/style.css
+++ b/style.css
@@ -53,17 +53,16 @@ a:hover {
 
 .main-box {
   position: sticky;
-  display: flex;
+  display:flex;
 }
 
 .logo-img {
-  background-color: #D8DEE9;  /* Light Nord background */
+  background-color: #D8DEE9;
   width: 30%;
   border-style: groove;
   border-width: 20px;
   border-radius: 6px;
-  border-color: #4C566A; /* Nord dark border */
-  display: block;
+  border-color: #4C566A;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
