--- a/style.css
+++ b/style.css
@@ -30,11 +30,9 @@ h2 {
 }
 
 .lesson-divider {
-  border-top-width: 2px;
-  border-top-style: dashed;
-  border-top-color: #7FB4FC;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  width: 100%;
+  border-top: 2px dashed #7FB4FC;
+  margin: 40px auto;
 }
 
 img {
@@ -53,16 +51,17 @@ a:hover {
 
 .main-box {
   position: sticky;
-  display:flex;
+  display: flex;
 }
 
 .logo-img {
-  background-color: #D8DEE9;
+  background-color: #D8DEE9;  
   width: 30%;
   border-style: groove;
   border-width: 20px;
   border-radius: 6px;
-  border-color: #4C566A;
+  border-color: #4C566A; 
+  display: block;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
